kerberos_ad_service/k8s/redis.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kerberos-sso-redis
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kerberos-sso-redis
  template:
    metadata:
      labels:
        app: kerberos-sso-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          args: ["redis-server", "--save", "", "--appendonly", "no"]
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: kerberos-sso-redis
  namespace: __NAMESPACE__
spec:
  selector:
    app: kerberos-sso-redis
  ports:
    - port: 6379
      targetPort: 6379
