kerberos_ad_service/k8s/service.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: kerberos-sso
  namespace: __NAMESPACE__
spec:
  selector:
    app: kerberos-sso
  ports:
    - name: http
      port: 80
      targetPort: 5000
