kerberos_ad_service/k8s/ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kerberos-sso
  namespace: __NAMESPACE__
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: __HOSTNAME__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kerberos-sso
                port:
                  number: 80
